npm run test-node

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "sinon-chai": "^2.5.0"
   },
   "scripts": {
-    "test": "istanbul cover node_modules/mocha/bin/_mocha -- -R dot --require test/node/setup --recursive test/node"
+    "lint": "jshint --verbose --reporter=node_modules/jshint-stylish src test",
+    "test-node": "istanbul cover node_modules/mocha/bin/_mocha -- -R dot --require test/setup --recursive test",
+    "test": "npm run lint && npm run test-node"
   }
 }
