--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "chai": "^2.1.0",
     "es5-shim": "^4.1.7",
     "istanbul": "^0.3.0",
-    "jshint": "^2.6.3",
-    "jshint-stylish": "^2.0.0",
     "mocha": "^2.0.1",
     "mocha-phantomjs": "^3.5.3",
+    "semistandard": "^6.1.1",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
   },
   "scripts": {
-    "lint": "jshint --verbose --reporter=node_modules/jshint-stylish src test",
+    "lint": "semistandard --verbose",
     "test-node": "istanbul cover node_modules/mocha/bin/_mocha -- -R dot --require test/chai_setup --recursive test",
     "test-phantom": "mocha-phantomjs -R dot test/index.html",
     "test": "npm run lint && npm run test-node && npm run test-phantom"
