--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "istanbul": "^0.3.0",
     "mocha": "^2.0.1",
     "mocha-phantomjs": "^3.5.3",
-    "semistandard": "6.0.0",
+    "semistandard": "^6.1.1",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
   },
