--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "istanbul": "^0.3.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.1.3",
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "^0.0.20",
@@ -34,7 +35,8 @@
     "lint": "semistandard --verbose",
     "test-node": "istanbul --config=test/istanbul.conf.js cover node_modules/mocha/bin/_mocha",
     "test-chrome": "karma start --single-run",
-    "test": "npm run lint && npm run test-node && npm run test-chrome",
+    "test-firefox": "karma start --single-run --browsers Firefox",
+    "test": "npm run lint && npm run test-node && npm run test-firefox",
     "coveralls": "coveralls < output/coverage/lcov.info",
     "travis": "npm test && npm run coveralls"
   }
