--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 addons:
-  firefox: "latest"
+  firefox: "latest-beta"
 script: "npm run travis"
