--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "karma-requirejs": "^0.2.2",
-    "karma-spec-reporter": "0.0.24",
+    "karma-spec-reporter": "^0.0.26",
     "mocha": "^2.0.1",
     "semistandard": "^7.0.2",
     "sinon": "^1.10.3",
