--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "vsvg": "^1.9.1"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.4.0",
-    "karma": "^1.1.2",
-    "karma-chrome-launcher": "^1.0.1",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.9",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-requirejs": "^1.0.0",
-    "karma-spec-reporter": "^0.0.26",
-    "mocha": "^2.0.1",
-    "semistandard": "^8.0.0",
-    "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0"
+    "karma-spec-reporter": "0.0.32",
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
+    "semistandard": "^14.2.0",
+    "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0"
   },
   "scripts": {
     "lint": "semistandard --verbose",
-    "test-node": "istanbul --config=test/istanbul.conf.js cover node_modules/mocha/bin/_mocha",
+    "start": "node src/index",
+    "test-node": "nyc --nycrc-path=test/nyc.conf.js  node_modules/mocha/bin/_mocha",
     "test-chrome": "karma start --single-run",
     "test-firefox": "karma start --single-run --browsers Firefox",
     "test": "npm run lint && npm run test-node && npm run test-firefox",
