--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.9",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
@@ -37,8 +36,6 @@
     "test:node": "nyc --nycrc-path=test/nyc.conf.js  node_modules/mocha/bin/_mocha",
     "test:chrome": "karma start --single-run",
     "test:firefox": "karma start --single-run --browsers Firefox",
-    "test": "npm run lint && npm run test:node && npm run test:chrome",
-    "coveralls": "coveralls < output/coverage/lcov.info",
-    "test:ci": "npm test && npm run coveralls"
+    "test": "npm run lint && npm run test:node && npm run test:chrome"
   }
 }
