--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "chrome-launcher": "^1.1.0",
     "http-server": "^14.1.1",
     "puppeteer-core": "^21.6.0",
-    "requirejs": "^2.1.18",
-    "vsvg": "^1.9.1"
+    "requirejs": "^2.1.18"
   },
   "devDependencies": {
     "chai": "^4.2.0",
