--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "version": "0.1.1",
   "description": "Maze generation in isomorphic JavaScript",
   "dependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
     "chrome-launcher": "^1.1.0",
     "http-server": "^14.1.1",
     "puppeteer-core": "^21.6.0",
-    "requirejs": "^2.1.18"
+    "requirejs": "^2.1.18",
+    "sinon-chai-es": "^3.7.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
