--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "Maze generation in isomorphic JavaScript",
   "dependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
+    "c8": "^8.0.1",
     "chrome-launcher": "^1.1.0",
     "http-server": "^14.1.1",
     "puppeteer-core": "^21.6.0",
@@ -22,7 +23,6 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^10.2.0",
-    "nyc": "^15.0.0",
     "semistandard": "^17.0.0",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.4.0"
@@ -32,7 +32,7 @@
     "mocha": "mocha",
     "serve": "http-server . -p 8080 --mimetypes dev/mime.types -o /src/index.html",
     "start": "node src/index.mjs",
-    "test:node": "nyc --nycrc-path=test/nyc.conf.js node_modules/mocha/bin/_mocha",
+    "test:node": "c8 mocha",
     "test:browser": "node dev/puppeteer-runner.mjs",
     "test": "npm run lint && npm run test:node && npm run test:browser"
   }
