--- a/package.json
+++ b/package.json
@@ -12,18 +12,16 @@
   "version": "0.1.1",
   "type": "module",
   "description": "Maze generation in isomorphic JavaScript",
-  "dependencies": {
-    "@esm-bundle/chai": "^4.3.4-fix.0",
-    "c8": "^8.0.1",
-    "chrome-launcher": "^1.1.0",
-    "http-server": "^14.1.1",
-    "puppeteer-core": "^21.6.0",
-    "sinon-chai-es": "^3.7.0"
-  },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "chrome-launcher": "^1.1.0",
+    "c8": "^8.0.1",
+    "http-server": "^14.1.1",
     "mocha": "^10.2.0",
+    "puppeteer-core": "^21.6.0",
     "semistandard": "^17.0.0",
-    "sinon": "^17.0.1"
+    "sinon": "^17.0.1",
+    "sinon-chai-es": "^3.7.0"
   },
   "scripts": {
     "lint": "semistandard --verbose",
